# AI_pred

./: AGENTS.md  ALL_Traindata1.mat  CMakeLists.txt  Copy_of_select-model fault data.mat  Data_V13_40kW.txt  FIXES_APPLIED.md  MAT_FILE_STRUCTURE.md  Prediction_model_1.m  Prediction_model_2.m  common_ffn.h  config.json  config_adamw.json  config_rmsprop.json  evaluation_report.txt  faultDiagMain.cpp  faultDiag_config.json  faultDiag_config_tcn.json  faultDiag_config_test.json  faultDiagnosis.cpp  faultDiagnosis.h  faultdiag_manager.cpp  faultdiag_manager.h  ffn_manager.cpp  ffn_manager.h  hybrid_predictions.csv  m1DCNN.m  myselfTCN.m  post_process.py  predictionSEDM.cpp  prediction_model_FFN.cpp  predictions.csv  sedm_manager.cpp  sedm_manager.h  training_controller.cpp  training_controller.h  unified_config.json  unified_main.cpp  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
vcpkg/overlay-ports/cudnn/: FindCUDNN.cmake  portfile.cmake
vcpkg/overlay-ports/libtorch/: portfile.cmake
